--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "talk and demo of reactjs and redux",
   "author": "Kurt Weiberth",
   "scripts": {
-    "start": "nodemon server/server.js --ignore components --ignore containers"
+    "start": "node server/server.js --ignore components --ignore containers"
   },
   "dependencies": {
     "babel-core": "^5.8.3",
